# shush

./: README.md  pyproject.toml
src/: shush.py
src/shush/: __init__.py  pytest.py
tests/: test_pytest.py  test_shush.py
