[tool.poetry]
name = "shush"
version = "0.3.2"
description = "Subprocesses for humans."
authors = ["John Freeman <jfreeman08@gmail.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
